下载文件；博文列表显示附件

--- a/WebContent/admin/edit.html
+++ b/WebContent/admin/edit.html
@@ -175,7 +175,9 @@
                                     <i class="fa fa-trash text-danger attachment-list-remove"></i>
                                 </div>
                                 <div class="col-xs-2 col-sm-1">
-                                    <i class="fa fa-download text-primary attachment-list-download"></i>
+                                    <a href="../UploadServlet?task=download&aid=${aid}$" target="_blank">
+                                        <i class="fa fa-download text-primary attachment-list-download"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
