--- a/WebContent/downloadError.html
+++ b/WebContent/downloadError.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <title>URL Error</title>
+        <title>Download Error</title>
         <link href="static/images/favicon.ico" type="image/x-icon" rel="icon"> 
         <link href="static/css/bootstrap.min.css" rel="stylesheet">
         <style type="text/css">
@@ -23,9 +23,9 @@
     <body>
     	<div class="container">
     	    <div class="jumbotron">
-	            <h1>URL Error</h1>
-	            <p class="text-warning">Yout URL is wrong, this may caused by parameters, check your URL and try again!</p>
-	            <p><a class="btn btn-warning btn-lg" href="index.html">Back to Index</a></p>
+	            <h1>Download Error</h1>
+	            <p class="text-warning">Your download URL is timeout or has been used. In order to download attachment file, download from blog page, because download URL is created by server dynamically.</p>
+	            <p><a class="btn btn-warning btn-lg" href="blogs.html">Back to Blogs</a></p>
 	        </div>
     	</div>
     </body>
