--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Meng Li's Home Page</title>
+		<meta name="keywords" content="浮尘追梦, fczm, Meng Li, 博客, Blog, Java Web, iOS">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="description" content="This is Meng Li's home page, you can visit my github, works and read my blogs. Have a awesome day!">
 		<link rel="Shortcut Icon" href="static/images/favicon.ico">
