--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="keywords" content="浮尘追梦, fczm, Meng Li, 博客, Blog, Java Web, iOS">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<link rel="Shortcut Icon" href="static/images/favicon.ico">
 		<link href="static/css/bootstrap.min.css" rel="stylesheet"/>
