--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -33,8 +33,8 @@
 							<span class="caret"></span>
 						</button>
 						<ul class="dropdown-menu" aria-labelledby="language-selector-button">
-							<li data-lang="en-US"><a>@{language_en_US}</a></li>
-							<li data-lang="zh-CN"><a>@{language_zh_CN}</a></li>
+							<li data-lang="en-US"><a>English</a></li>
+							<li data-lang="zh-CN"><a>简体中文</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
