恢复生成所有博文按钮

--- a/WebContent/admin/list.html
+++ b/WebContent/admin/list.html
@@ -41,10 +41,13 @@
 							</ul>
 						</div>
             		</div>
-            		<div class="col-sm-9">
+            		<div class="col-sm-7">
 						<input id="search-blog" type="text" placeholder="Search Title" class="text-info text-center">
 		                <i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
 		                <a id="add-blog" href="add.html"><i class="fa fa-plus fa-lg pull-right add-icon"></i></a>
+            		</div>
+            		<div class="col-sm-2">
+            			<button id="regenerate-all" class="btn btn-default btn-block">Regenerate All</button>
             		</div>
             	</div>
             </div>
