Programming Skill & Web Application.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -57,12 +57,86 @@
 				</div>
 			</div>
 		</div>
-		<div class="quote text-center">
+		<div id="motto" class="text-center">
 			<div class="container">
 				<p>@{index_motto}</p>
 			</div>
 		</div>
-		<div class="works" id="works"></div>
+		<div id="technology">
+			<div class="container">
+				<div class="col-md-10">
+					<h2>TECHNOLOGY</h2>
+					<p>筑波大学筑波大学・システム情報工学研究科・コンピュータサイエンス専攻</p>
+					<p>分散システムと信頼しないサーバでアプリの構築に注目</p>
+				</div>
+				<div class="col-md-2">
+					<img src="static/images/qrcode-github.png"/>
+				</div>
+			</div>
+		</div>
+		<div id="education" class="block deep">
+			<div class="container">
+				<div class="col-xs-12">
+					<h1 class="text-center">教育経歴</h1>
+				</div>
+				<div class="col-xs-4">
+					<img src="static/images/nefu.png">
+				</div>
+				<div class="col-xs-4">
+					<img src="static/images/kit.png">
+				</div>
+				<div class="col-xs-4">
+					<img src="static/images/ut.png">
+				</div>
+			</div>
+		</div>
+		<div id="skill" class="block">
+			<div class="container">
+				<div class="col-xs-12">
+					<h1 class="text-center">プログラミングスキル</h1>
+				</div>
+				<div id="le4" class="col-xs-6 col-md-3">
+					<h2>Le.4</h2>
+					<h3>Java, Objective-C</h3>
+					<p>利用するだけでなくライブラリ構築等ができる</p>
+				</div>
+				<div id="le3" class="col-xs-6 col-md-3">
+					<h2>Le.4</h2>
+					<h3>Java, Objective-C</h3>
+					<p>利用するだけでなくライブラリ構築等ができる</p>
+				</div>
+				<div id="le2" class="col-xs-6 col-md-3">
+					<h2>Le.4</h2>
+					<h3>Java, Objective-C</h3>
+					<p>利用するだけでなくライブラリ構築等ができる</p>
+				</div>
+				<div id="le1" class="col-xs-6 col-md-3">
+					<h2>Le.4</h2>
+					<h3>Java, Objective-C</h3>
+					<p>利用するだけでなくライブラリ構築等ができる</p>
+				</div>
+			</div>
+		</div>
+		<div id="web" class="block deep">
+			<div class="container">
+				<div class="col-xs-12">
+					<h1 class="text-center">Webアプリケーション</h1>
+				</div>
+				<div class="col-xs-4">
+					<img src="static/images/java.png">
+					<p class="text-center">Java</p>
+				</div>
+				<div class="col-xs-4">
+					<img src="static/images/javascript.png">
+					<p class="text-center">JavaScript</p>
+				</div>
+				<div class="col-xs-4">
+					<img src="static/images/html-css.png">
+					<p class="text-center">HTML/CSS</p>
+				</div>
+			</div>
+			
+		</div>
 		<div id="contact" class="contact"> 
 			<div class="container">
 				<h2 class="text-center">@{index_contact}</h2>
