Blog and Easy finance.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -135,7 +135,53 @@
 					<p class="text-center">HTML/CSS</p>
 				</div>
 			</div>
-			
+		</div>
+		<div class="block production">
+			<div class="container">
+				<div class="col-xs-12">
+					<h1 class="text-center">ブログ記事</h1>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<img src="static/images/blog1.png">
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<img src="static/images/blog1.png">
+				</div>
+				<div class="col-sm-8 col-md-4">
+					<h3>個人ホームページ</h3>
+					<h3>ブログ記事システム</h3>
+					<ul>
+						<li>記事の分類の追加と変更、削除</li> 
+						<li>記事の追加と変更、削除</li>
+						<li>記事に画像と添付ファイルを追加</li>
+						<li>キーワードで記事を検索</li>
+						<li>レビューとコメント</li>
+					</ul>
+				</div>
+				<div class="col-sm-4 col-md-4">
+					<img src="static/images/blog-qrcode.png">
+					<a href="http://fczm.pw"><p class="text-center">http://fczm.pw</p></a>
+				</div>
+			</div>
+		</div>
+		<div class="block production deep">
+			<div class="container">
+				<h1 class="text-center">Easy Finance</h1>
+				<div class="col-sm-4">
+					<h3>個人向け財務管理アプリ</h3>
+					<ul>
+						<li>帳簿を簡単に管理</li> 
+						<li>図で報告の作成</li>
+						<li>何でも記録</li>
+						<li>賢くお金を使える</li>
+					</ul>
+					<img src="static/images/easy-qrcode.png">
+					<a href="http://easy.fczm.pw"><p class="text-center">http://easy.fczm.pw</p></a>
+				</div>
+				<div class="col-sm-8">
+					<img src="static/images/easy.png">
+				</div>
+			</div>
 		</div>
 		<div id="contact" class="contact"> 
 			<div class="container">
